# CRVisToolkit

./: .pre-commit-config.yaml  LICENSE  README.md
ctcr/: ctcr_draw_example.m
matlab/ctcr/: draw_ctcr.m
matlab/tdcr/: draw_tdcr.m  tdcr_draw_example.m
matlab/util/: robotindependentmapping.m
python/: README.md  TODO.md  data  draw_ctcr.py  draw_tdcr.py  main.py  parser.py  pyproject.toml  requirements.txt  robotindependentmapping.py  tdcr_curve_examples.json  utils.py
python/common/: coordinates.py  jacobian.py  robot.py  types.py  utils.py
python/examples/: __init__.py  plot.py  tdcr_fourseg.json
python/ik/: base_solver.py  index.py  nr.py  target.py
python/ik/solvers/: base_solver.py  neppalli.py  nr.py
python/ik/tests/: neppalli_tests.py  nr_tests.py
python/plotter/: ctcr.py  main.py  tdcr.py
python/tests/: __init__.py  test_common_segment.py
tdcr/: draw_tdcr.m  tdcr_curve_examples.mat
