[tool.poetry]
name = "crkit"
package-mode = false
version = "0.1.0"
description = "A Visualization and Inverse-Kinematics tookit for Continuum Robots"
authors = ["dhan2325 <danihan2325@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
structlog = "^24.4.0"
scipy = "^1.14.1"
numdifftools = "^0.9.41"
spatialmath-python = "^1.1.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
